Before site copy update.

--- a/templates/flatpages/footer.html
+++ b/templates/flatpages/footer.html
@@ -24,7 +24,7 @@
     <div class="container">
       <div class="social-links">
         <div class="logo-icon">
-          <img src="/static/images/feedmee-heart.svg" alt="Feedmee Heart">
+          <img src="{% static 'images/feedmee-heart.svg' %}" alt="Feedmee Heart">
         </div>
         <ul class="list-unstyled">
           <li><a href="https://www.instagram.com/feedmeeapp_au/"><img src="{% static 'images/instagram.svg' %}" alt=""></a></li>
