--- a/templates/flatpages/privacy.html
+++ b/templates/flatpages/privacy.html
@@ -125,51 +125,7 @@ Does the Application collect precise real time location information of the devic
           </div>
         </div>
       </main>
-<footer class="section-footer">
-  <div class="footer-links">
-    <div class="container">
-      <div class="list-links">
-        <h4>What we do</h4>
-        <ul>
-          <li><a href="/impact/">Impact</a></li>
-          <li><a href="/events/">Events</a></li>
-          <li><a href="/blog/">Blog</a></li>
-          <li><a href="https://itunes.apple.com/au/app/feedmee-discover-food-4-you-eat-out-give-back/id1120549992?mt=8">Download</a></li>
-        </ul>
-      </div>
-      <div class="list-links">
-        <h4>About us</h4>
-        <ul>
-          <li><a href="/team/">Team</a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
-  <!-- end: .footer-links -->
-  <div class="footer-bottom">
-    <div class="container">
-      <div class="social-links">
-        <div class="logo-icon">
-          <img src="/static/images/feedmee-heart.svg" alt="Feedmee Heart">
-        </div>
-        <ul class="list-unstyled">
-          <li><a href="https://www.instagram.com/feedmeeapp_au/"><img src="{% static 'images/instagram.svg' %}" alt=""></a></li>
-          <li><a href="https://www.facebook.com/Feedmeeapp/"><img src="{% static 'images/facebook.svg' %}" alt=""></a></li>
-          <li><a href="https://twitter.com/FeedmeeA"><img src="{% static 'images/twitter.svg' %}" alt=""></a></li>
-          <li><a href="https://www.linkedin.com/company-beta/13179226/"><img src="{% static 'images/linkedin.svg' %}" alt=""></a></li>
-          <li><a href="https://medium.com/feedmee-app"><img src="{% static 'images/medium.svg' %}" alt=""></a></li>
-        </ul>
-      </div>
-      <div class="term-links">
-        <ul class="list-unstyled">
-          <li><a href="/privacy/">Privacy</a></li>
-          <li><a href="/terms/">Term of Use</a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
-  <!-- end: .footer-bottom -->
-</footer>
+      {% include 'flatpages/footer.html' %}
     </div>
     <!-- end: .wrapper -->
   </div>
