--- a/templates/react_base.html
+++ b/templates/react_base.html
@@ -5,4 +5,4 @@
   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
   ga('create', 'UA-73297120-1', 'auto');
   ga('send', 'pageview');
-</script><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script type="text/javascript" src="{% static 'js/main.131589ab.js' %}"></script>{% if deeplink.useragent_is_target and app_url %}<script>window.location='{{app_url}';setTimeout(function () {window.location = 'https://itunes.apple.com/app/feedmee-discover-food-4-you-eat-out-give-back/id1120549992';},4000);</script>{% endif %}</body></html>
+</script><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script type="text/javascript" src="{% static 'js/main.4dfa0ad7.js' %}"></script>{% if deeplink.useragent_is_target and app_url %}<script>window.location='{{app_url}}';setTimeout(function () {window.location = 'https://itunes.apple.com/app/feedmee-discover-food-4-you-eat-out-give-back/id1120549992';},4000);</script>{% endif %}</body></html>
